--- a/.gitignore
+++ b/.gitignore
@@ -1,104 +1,33 @@
 
-## R
+# Ignore everything
+*
+# Don't ignore directories, so we can recurse into them
+!*/
+# Don't ignore .gitignore and R files
+!.gitignore
+!*.r
+!*.R
+!README.md
+!LICENSE
+!*.def
+# codespaces
+!.devcontainer/devcontainer.json
+!.devcontainer/install.r
+!.radian_profile
+# Don't ignore input data files
+!*.csv
 
-# History files
-.Rhistory
-.Rapp.history
+# Don't ignore executables
+!Exe/*
+!*.exe
 
-# Session Data files
-.RData
-
-# User-specific files
-.Ruserdata
-
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-## C++
-
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-## General/Windows
-
-#GPG key
-secring.*
-
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
+# Don't ignore key SS files
+!ss.par
+!control.ss
+!data.ss
+!starter.ss_new
+!forecast.ss_new
+!control.ss_new
+!data_echo.ss_new
+!data.ss_new
+!warning.sso
